express setup;  home page

--- a/front/views/template.ejs
+++ b/front/views/template.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
 
 
-<h2 class="title">CV Library</h2>
+<%- include('header'); -%>
+    <h2 class="title">CV Library</h2>
 
 
 </html>
