--- a/front/public/main.css
+++ b/front/public/main.css
@@ -8,6 +8,7 @@ body {
     font-weight: bold;
     font-size: 32px;
     text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .container {
