--- a/views/layouts/wrapper.ejs
+++ b/views/layouts/wrapper.ejs
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
+        CV Lib:
         <%- title %>
     </title>
-    <link rel="stylesheet" href="css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+    <link href="/static/main.css" rel="stylesheet">
 </head>
 
 <body>
+    <main>
+        <div class="container">
+            <%- include('../partials/header.ejs') %>
 
-    <div class="wrapper">
-        <%- include('../partials/header.ejs') %>
-            <main>
                 <%- body %>
-            </main>
+    </main>
 
     </div>
 </body>
