--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,17 +1,1 @@
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-
-    <link href="/static/main.css" rel="stylesheet">
-
-    <title>CV Lib</title>
-</head>
-
-<body>
-
-    <main>
-        <div class="container">
+<header> header </header>
