--- a/views/layouts/wrapper.ejs
+++ b/views/layouts/wrapper.ejs
@@ -17,7 +17,7 @@
 <body>
     <main>
         <div class="container">
-            <%- include('../partials/header.ejs') %>
+            <%- include('../partials/nav.ejs') %>
 
                 <%- body %>
     </main>
