--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
-<div class="login-form">
-    <h1>Login Form</h1>
-    <form action="auth" method="POST">
+<div class="container">
+    <h1 class="title">Login Form</h1>
+    <form class="" action="auth" method="POST">
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
         <input type="submit">
