--- a/public/main.css
+++ b/public/main.css
@@ -39,7 +39,7 @@ body {
 /* Change the color of links on hover */
 
 .topnav a:hover {
-    background-color: #ddd;
+    background-color: rgb(140, 183, 216);
     color: black;
 }
 
@@ -47,6 +47,6 @@ body {
 /* Add a color to the active/current link */
 
 .topnav a.active {
-    background-color: #1652916b;
+    background-color: #9ce8ff6b;
     color: white;
 }
