--- a/views/layouts/wrapper.ejs
+++ b/views/layouts/wrapper.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         CV Lib:
-        <%- title %>
+        <%= title %>
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -18,8 +18,8 @@
     <main>
         <div class="container">
             <%- include('../partials/nav.ejs') %>
-
                 <%- body %>
+                    <%- include('../partials/footer.ejs') %>
     </main>
 
     </div>
