--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,12 @@
-<div class="container">
-    <h1 class="title">Login Form</h1>
+<div class="">
+    <h2 class="title">Login</h2>
     <form class="" action="auth" method="POST">
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <input type="submit">
+        <p>
+            <input type="text" name="username" placeholder="Username" required>
+        </p>
+        <p>
+            <input type="password" name="password" placeholder="Password" required>
+        </p>
+        <input type="submit" value="Login">
     </form>
 </div>
