--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
 <div class="">
     <form class="" action="filter" method="POST">
-        <input type="text" name="job" placeholder="Job title" required>
+        <input type="text" name="job" placeholder="Job title">
         <input type="text" name="strenghts" placeholder="Your strenghts">
         <input type="submit" value="Search">
     </form>
