--- a/public/main.css
+++ b/public/main.css
@@ -74,3 +74,10 @@ body {
     background-color: rgba(160, 204, 237, 0.624);
     color: black;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+}
