--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
     <h2 class="title">Login</h2>
     <form class="" action="auth" method="POST">
         <p>
-            <input type="text" name="username" placeholder="Username" required>
+            <input type="text" name="email" placeholder="Email" required>
         </p>
         <p>
             <input type="password" name="password" placeholder="Password" required>
