- Tweaked UI design. - Fixed typo in app.js

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,16 @@
-<h1 class="title">
-    About Us
-</h1>
+<section class="block">
+    <div class="hero is-success">
+        <div class="hero-body">
+            <div class="container">
+                <h2 class="title">About Us</h2>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="block">
+    <div class="container">
+        <h1 style="font-size: 150px">Some Stuff About Us</h1>
+        <p>:)</p>
+    </div>
+</section>
