--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,12 +1,54 @@
-<div class="topnav">
-    <a href="/"> Home</a>
-    <a href="/about">About</a>
-    <% if (typeof userid === 'undefined') { %>
-        <a href="/login">Login</a>
-        <% }else { %>
-            <a href="/user">Profile</a>
-            <a style="text-align: right" href="/logout">Logout</a>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+            <img src="https://livejones.com/wp-content/uploads/2020/05/logo-Placeholder.png" width="70" height="28"
+                 alt="Logo">
+        </a>
+
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="cvLibNavbar">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
+
+    <div id="cvLibNavbar" class="navbar-menu">
+        <div class="navbar-start">
+            <a class="navbar-item" href="/">
+                Home
+            </a>
+
+            <a class="navbar-item" href="/about">
+                About
+            </a>
+        </div>
+
+        <div class="navbar-end">
+            <% if (typeof userid === 'undefined') { %>
+                <div class="navbar-item">
+                    <div class="buttons">
+                        <a class="button is-light" href="/login">
+                            Log in
+                        </a>
+                    </div>
+                </div>
+            <% } else { %>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link">
+                        <%= userid %>
+                    </a>
+
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item" href="/user">
+                            Profile
+                        </a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item" href="/logout">
+                            Logout
+                        </a>
+                    </div>
+                </div>
             <% } %>
-
-
-</div>
+        </div>
+    </div>
+</nav>
