--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,2 +1,16 @@
-<h2 class="title">
-    CV Post </h2>
+<section class="block">
+    <div class="hero is-success">
+        <div class="hero-body">
+            <div class="container">
+                <h2 class="title">CV Post</h2>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="block">
+    <div class="container">
+        
+    </div>
+</section>
