--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,6 +1,18 @@
-<h1 class="title">
-    Profile
-</h1>
-<p> Hi,
-    <%= user.email.split("@")[0] %>
-</p>
+<section class="block">
+    <div class="hero is-success">
+        <div class="hero-body">
+            <div class="container">
+                <h2 class="title">Profile</h2>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="block">
+    <div class="container">
+        <p> Hi,
+            <%= user.email.split("@")[0] %>
+        </p>
+    </div>
+</section>
