--- a/public/main.css
+++ b/public/main.css
@@ -1,54 +1,21 @@
+html, body {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 body {
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: #acc5d0;
-}
-
-.title {
-    font-weight: bold;
-    font-size: 32px;
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-}
-
-.container {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding-bottom: 10px;
-    padding-top: 10px;
-    height: 100vh;
-}
-
-.topnav {
-    background-color: rgb(111, 111, 111);
-    overflow: hidden;
+    /*background-color: #acc5d0;*/
 }
 
 
-/* Style the links inside the navigation bar */
-
-.topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-
-/* Change the color of links on hover */
-
-.topnav a:hover {
-    background-color: rgb(140, 183, 216);
-    color: black;
-}
-
-
-/* Add a color to the active/current link */
-
-.topnav a.active {
-    background-color: #9ce8ff6b;
-    color: white;
+ul.is-unstyled {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .post {
@@ -73,11 +40,4 @@ body {
 .post a:hover {
     background-color: rgba(160, 204, 237, 0.624);
     color: black;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
 }
