--- a/views/layouts/wrapper.ejs
+++ b/views/layouts/wrapper.ejs
@@ -5,24 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        CV Lib:
-        <%= title %>
+        CVLib | <%= title %>
     </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 
     <link href="/static/main.css" rel="stylesheet">
 </head>
 
 <body>
-    <main>
-        <div class="container">
-            <%- include('../partials/nav.ejs') %>
-                <%- body %>
-                    <%- include('../partials/footer.ejs') %>
-    </main>
 
+<%- include('../partials/nav.ejs') %>
+<div class="content">
+    <div class="block">
+        <%- body %>
     </div>
+</div>
+<%- include('../partials/footer.ejs') %>
 </body>
 
 </html>
