--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,30 +1,27 @@
-<!-- Site footer -->
 <footer class="footer">
-
-    <div class="row">
-        <div class="col-sm-12 col-md-6">
-            <h6>About</h6>
-            <p class="text-justify">CV LIB </p>
+    <div class="content has-text-centered">
+        <h1 class="title">
+            <strong>CV LIB</strong>
+        </h1>
+        <div class="columns">
+            <div class="column">
+                <aside class="menu">
+                    <p class="menu-label">
+                        Quick Links
+                    </p>
+                    <ul class="menu-list is-unstyled" style="">
+                        <li><a href="/about"><span
+                                        style="text-decoration: line-through; font-size: small">among </span>About
+                                Us</a>
+                        </li>
+                        <li><a href="mailto: contacts@email.com">Contact Us</a></li>
+                    </ul>
+                </aside>
+            </div>
+            <div class="column">
+                Something Else Here
+            </div>
         </div>
-
-        <div class="col-xs-6 col-md-3">
-            <h6>Quick Links</h6>
-            <ul class="footer-links">
-                <li><a href="/about/">About Us</a></li>
-                <li>Contact Us <br>
-                    <a href="mailto: contacts@email.com"> contacts@email.com</a>
-                </li>
-            </ul>
-        </div>
+        <p>Copyright &copy; <%= new Date().getFullYear() %> CV Lib</p>
     </div>
-    <hr>
-    </div>
-
-    <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text">Copyright &copy; 2021 CV Lib
-
-            </p>
-        </div>
-
 </footer>
