--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
     <div class="hero is-success">
         <div class="hero-body">
             <div class="container">
-                <h2 class="title">Login</h2>
+                <h2 class="title">Register</h2>
             </div>
         </div>
     </div>
@@ -13,7 +13,7 @@
         <div class="columns is-centered">
             <div class="column is-8-tablet is-8-desktop is-6-widescreen">
 
-                <form action="auth" class="box" method="post">
+                <form action="register" class="box" method="post">
                     <div class="field is-horizontal">
 
                         <% if (locals.msg ) { %>
@@ -23,9 +23,9 @@
                                         <%= msg %>
                                     </p>
                                 </div>
-
                             </div>
                             <% } %>
+
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
@@ -54,14 +54,48 @@
                             </div>
                         </div>
                     </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label" for="emailTextInput">Full Name</label>
+                        </div>
+
+
+                        <div class="field-body">
+
+                            <div class="field">
+                                <p class="control">
+                                    <input class="input" id="nameTextInput" name="name" placeholder="John Doe" type="name">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label">Gender</label>
+                        </div>
+                        <div class="field-body">
+
+                            <div class="field">
+                                <div class="control">
+                                    <label class="radio">
+                              <input type="radio" name="answer">
+                              Female
+                            </label>
+                                    <label class="radio">
+                              <input type="radio" name="answer">
+                              Male
+                            </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="field">
                         <button class="button is-success">
-                            Login
+                            Register
                         </button>
-                        <a href="/register">
-                           Don't have account?
-                        </a>
-                    </div>
+
+                </form>
+                </div>
             </div>
         </div>
 </section>
