login connected to database/ response is returned

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -56,7 +56,7 @@
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
-                            <label class="label" for="emailTextInput">Full Name</label>
+                            <label class="label" for="firstNameTextInput">First Name</label>
                         </div>
 
 
@@ -64,7 +64,37 @@
 
                             <div class="field">
                                 <p class="control">
-                                    <input class="input" id="nameTextInput" name="name" placeholder="John Doe" type="name">
+                                    <input class="input" id="fisrtNameTextInput" name="firstName" placeholder="John" type="name">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label" for="lastNameTextInput">Last Name</label>
+                        </div>
+
+
+                        <div class="field-body">
+
+                            <div class="field">
+                                <p class="control">
+                                    <input class="input" id="lastNameTextInput" name="lastName" placeholder="Doe" type="name">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label" for="dateOfBirthTextInput">Date of Birth</label>
+                        </div>
+
+
+                        <div class="field-body">
+
+                            <div class="field">
+                                <p class="control">
+                                    <input class="input" id="dateOfBirthTextInput" name="dateOfBirth" placeholder="01/01/01" type="date">
                                 </p>
                             </div>
                         </div>
@@ -86,6 +116,36 @@
                               Male
                             </label>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label" for="dateOfBirthTextInput">Education</label>
+                        </div>
+
+
+                        <div class="field-body">
+
+                            <div class="field">
+                                <p class="control">
+                                    <input class="input" id="dateOfBirthTextInput" name="dateOfBirth" placeholder="01/01/01" type="date">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal">
+                            <label class="label" for="dateOfBirthTextInput">Date of Birth</label>
+                        </div>
+
+
+                        <div class="field-body">
+
+                            <div class="field">
+                                <p class="control">
+                                    <input class="input" id="dateOfBirthTextInput" name="dateOfBirth" placeholder="01/01/01" type="date">
+                                </p>
                             </div>
                         </div>
                     </div>
