register.ejs added; reg connected to DB

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -121,7 +121,7 @@
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
-                            <label class="label" for="dateOfBirthTextInput">Education</label>
+                            <label class="label" for="educationTextInput">Education</label>
                         </div>
 
 
@@ -129,14 +129,14 @@
 
                             <div class="field">
                                 <p class="control">
-                                    <input class="input" id="dateOfBirthTextInput" name="dateOfBirth" placeholder="01/01/01" type="date">
+                                    <input class="input" id="educationTextInput" name="education" placeholder="Univesity of London" type="name">
                                 </p>
                             </div>
                         </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
-                            <label class="label" for="dateOfBirthTextInput">Date of Birth</label>
+                            <label class="label" for="addressTextInput">Address</label>
                         </div>
 
 
@@ -144,7 +144,7 @@
 
                             <div class="field">
                                 <p class="control">
-                                    <input class="input" id="dateOfBirthTextInput" name="dateOfBirth" placeholder="01/01/01" type="date">
+                                    <input class="input" id="addressTextInput" name="address" placeholder="London, UK" type="name">
                                 </p>
                             </div>
                         </div>
