--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,8 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" href="/">
-            <img src="https://livejones.com/wp-content/uploads/2020/05/logo-Placeholder.png" width="70" height="28"
-                 alt="Logo">
+            <img src="https://livejones.com/wp-content/uploads/2020/05/logo-Placeholder.png" width="70" height="28" alt="Logo">
         </a>
 
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="cvLibNavbar">
@@ -21,6 +20,17 @@
             <a class="navbar-item" href="/about">
                 About
             </a>
+
+            <a class="navbar-item" href="/upload">
+                Upload
+            </a>
+            <!-- Uncomment this and delete the Upload above later
+                 <% if (typeof userid !== 'undefined') { %>
+
+                <a class="navbar-item" href="/upload">
+                        Upload
+                    </a>
+                <% } %> -->
         </div>
 
         <div class="navbar-end">
@@ -32,23 +42,24 @@
                         </a>
                     </div>
                 </div>
-            <% } else { %>
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">
-                        <%= userid %>
-                    </a>
+                <% } else { %>
 
-                    <div class="navbar-dropdown">
-                        <a class="navbar-item" href="/user">
+                    <div class="navbar-item has-dropdown is-hoverable">
+                        <a class="navbar-link">
+                            <%= userid %>
+                        </a>
+
+                        <div class="navbar-dropdown">
+                            <a class="navbar-item" href="/user">
                             Profile
                         </a>
-                        <hr class="navbar-divider">
-                        <a class="navbar-item" href="/logout">
+                            <hr class="navbar-divider">
+                            <a class="navbar-item" href="/logout">
                             Logout
                         </a>
+                        </div>
                     </div>
-                </div>
-            <% } %>
+                    <% } %>
         </div>
     </div>
 </nav>
