--- a/views/register.ejs
+++ b/views/register.ejs
@@ -108,11 +108,11 @@
                             <div class="field">
                                 <div class="control">
                                     <label class="radio">
-                              <input type="radio" name="answer">
+                              <input type="radio" name="gender" value="female">
                               Female
                             </label>
                                     <label class="radio">
-                              <input type="radio" name="answer">
+                              <input type="radio" name="gender" value="male">
                               Male
                             </label>
                                 </div>
