upload api, dropdown list on search

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -108,12 +108,20 @@
                             <div class="field">
                                 <div class="control">
                                     <label class="radio">
-                              <input type="radio" name="gender" value="female">
+                              <input type="radio" name="gender" value="Female">
                               Female
                             </label>
                                     <label class="radio">
-                              <input type="radio" name="gender" value="male">
+                              <input type="radio" name="gender" value="Male">
                               Male
+                            </label>
+                                    <label class="radio">
+                                <input type="radio" name="gender" value="Other">
+                                Other
+                            </label>
+                                    <label class="radio">
+                                <input type="radio" name="gender" value="Prefer not to say">
+                                Prefer not to say
                             </label>
                                 </div>
                             </div>
