--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -8,6 +8,7 @@
     </div>
 </section>
 
+
 <section class="block">
     <div class="container">
         <div class="columns is-centered">
@@ -29,7 +30,7 @@
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
-                            <label class="label" for="titleTextInput">Title</label>
+                            <label class="label" for="userIdTextInput">User ID</label>
                         </div>
 
 
@@ -37,19 +38,7 @@
 
                             <div class="field">
                                 <p class="control">
-                                    <input class="input" id="titleTextInput" name="title" placeholder="CV 1" type="name">
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label" for="jobTextInput">Job Position</label>
-                        </div>
-                        <div class="field-body">
-                            <div class="field">
-                                <p class="control">
-                                    <input class="input" id="jobTextInput" name="password" placeholder="Software Engineer" type="name">
+                                    <input class="input" id="userIdTextInput" name="userId" placeholder="2" type="number">
                                 </p>
                             </div>
                         </div>
@@ -57,37 +46,36 @@
 
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
-                            <label class="label" for="technicalSkillsTextInput">Technical Skills</label>
+                            <label class="label" for="jobTitleInput">Job Title</label>
                         </div>
-
-
                         <div class="field-body">
-
                             <div class="field">
                                 <p class="control">
-                                    <input class="input" id="technicalSkillsTextInput" name="technicalSkills" placeholder="Python" type="name">
+                                    <input class="input" id="jobTitleInput" name="jobTitle" placeholder="Software Engineer" type="name">
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="field is-horizontal">
-                        <div class="field-label is-normal">
-                            <label class="label" for="softSkillsTextInput">Soft Skills</label>
-                        </div>
 
-
-                        <div class="field-body">
-
-                            <div class="field">
-                                <p class="control">
-                                    <input class="input" id="softSkillsTextInput" name="softSkills" placeholder="Time Management" type="name">
-                                </p>
+                    <!-- 
+                        <div class="field is-horizontal">
+                            <div class="field-label is-normal">
+                                <label class="label" for="softSkillsTextInput">Soft Skills</label>
                             </div>
-                        </div>
-                    </div>
+
+
+                            <div class="field-body">
+
+                                <div class="field">
+                                    <p class="control">
+                                        <input class="input" id="softSkillsTextInput" name="softSkills" placeholder="Time Management" type="name">
+                                    </p>
+                                </div>
+                            </div>
+                        </div> -->
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
-                            <label class="label" for="statusTextInput">Status</label>
+                            <label class="label" for="jobOffersTextInput">Job Offers</label>
                         </div>
 
 
@@ -95,7 +83,7 @@
 
                             <div class="field">
                                 <p class="control">
-                                    <input class="input" id="statusTextInput" name="status" placeholder="submitted" type="name">
+                                    <input class="input" id="jobOffersTextInput" name="jobOffers" placeholder="Google" type="name">
                                 </p>
                             </div>
                         </div>
