--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
     </div>
 </section>
 
+
 <section class="block">
     <div class="container">
         <form class="form" action="filter" method="POST">
@@ -15,10 +16,18 @@
                 <div class="field-label is-normal">
                     <label class="label" for="jobTextInput">Job Title</label>
                 </div>
+
                 <div class="field-body">
                     <div class="field">
                         <p class="control">
-                            <input class="input" id="jobTextInput" name="job" placeholder="Software Engineer" type="text">
+                            <input class="input" id="jobTextInput" name="jobTitle" placeholder="Software Engineer" type="text" list="jobList">
+                            <datalist id="jobList">
+
+                               
+                                <% for (job of jobList) {   %>
+                                    <option> <%= job %> </option>
+                                    <% } %>
+                            </datalist>
                         </p>
                     </div>
                 </div>
@@ -68,7 +77,7 @@
                             <%= cv.id %>
                         </td>
                         <td>
-                            <%= cv.job %>
+                            <%= cv.jobTitle %>
                         </td>
                         <td>
                             <%= cv.technicalSkills %>
