--- a/views/user.ejs
+++ b/views/user.ejs
@@ -11,8 +11,11 @@
 
 <section class="block">
     <div class="container">
-        <p> Hi,
-            <%= user.email.split("@")[0] %>
-        </p>
+        <h1>
+            Hello,
+            <%= email.split("@")[0] %>
+        </h1>
     </div>
+
+
 </section>
